[package]
name = "alecghost-roll"
description = "A simple CLI dice roller"
repository = "https://github.com/AlecGhost/roll"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "roll"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
comfy-table = "7.1.3"
nom = "7.1.3"
anyhow = "1.0.94"
